--- a/.gitignore
+++ b/.gitignore
@@ -1,55 +1,5 @@
-# Dependencies
-node_modules
-/.pnp
-.pnp.js
-
-# Build outputs
-dist
-build
-*.tar.gz
-
-# Environment files
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-.env*.local
-
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Cache and editor files
+node_modules/
 .DS_Store
-.idea/
-.vscode/
-*.swp
-*.swo
-.cache
-.project
-.settings
-.tmproj
-*.esproj
-nbproject
-*.sublime-project
-*.sublime-workspace
-
-# Runtime data
-pids
-*.pid
-*.seed
-*.pid.lock
-
-# Test coverage
-/coverage
-.nyc_output
-
-# Server static output
-server/public
-
-# Vite
-vite.config.ts.*
+.env
+dist/
+*.log
